File Uploads via HTML 5 & bug fixes
Fixes to css, combo boxes, added the sortable option to grid columns,
added the grid to renderer arguments, fixed a bug where a grid wouldn't
resize with its containing pane, changed the default fit to allow for
better column sizing. Added the Wui version number to the object.
Allowed for different ajax options to be automatically applied when
files are being uploaded. Added Wui.forAjaxFileUpload() that turns a
regular object into a file object. Removed a "feature" in Wui.Data that
was making requests take too long. Fixed a major bug in the datepicker
that would crash the browser if the Wui got loaded on the page more than
once.

--- a/wui-1-2/css/wui.css
+++ b/wui-1-2/css/wui.css
@@ -293,11 +293,11 @@ button::-moz-focus-inner { border:0; }
         font-weight:bold; padding:0.5em 41px 0.5em 0.5em; text-align:left; float:left; list-style: none; margin:0;
         border-right:1px solid #fff; text-shadow: 0 0 3px rgba(0,0,0,0.4); position: relative;
     }
+    .wui-gc.wui-no-sort {padding-right:0;}
     .wui-gc:last-child {  border-right:0; }
     .wui-gc div:first-child {
         bottom: 0.5em;
         font-size: 0.9em;
-        left: 0.5em;
         overflow: hidden;
         padding-right:41px;
         max-width:    100%;
@@ -305,6 +305,7 @@ button::-moz-focus-inner { border:0; }
         text-overflow: ellipsis;
         white-space: nowrap;
     }
+    .wui-gc.wui-no-sort.ui-resizable div:first-child { padding-right: 0; }
     .has-vert-columns .wui-gh ul {height:150px;}
     .has-vert-columns .wui-gc {height:150px;}
     .wui-gc.vert-col {width:50px;}
@@ -344,6 +345,7 @@ button::-moz-focus-inner { border:0; }
 .grid-body {width:100%; max-width: 100%; min-width: 100%; border-top:1px solid #fff; overflow:auto; position: absolute; background:#fff; color:#444;}
 .grid-body table {border-collapse:collapse;}
     .grid-body td { background-position:center center; border-bottom:0; border:1px dotted #ccc; }
+        .grid-body tr:nth-child(2n) { background-color: #fff; }
         .grid-body tr:nth-child(2n+1) { background-color: #eee; }
             .grid-body td > div {width:100%; height:100%; padding:0.25em; position:relative; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
 
